--- a/portfolio-front/src/styles/index.scss
+++ b/portfolio-front/src/styles/index.scss
@@ -921,6 +921,7 @@ ul {
       flex: 0 0 7rem;
       overflow: hidden;
       border: thin $white-color solid;
+      border-radius: 0.2rem;
       transition: all 0.3s ease-in-out;
 
       &:hover, &:focus-visible {
