--- a/portfolio-front/src/styles/index.scss
+++ b/portfolio-front/src/styles/index.scss
@@ -174,6 +174,7 @@ ul {
       backdrop-filter: blur(0.25rem);
       -webkit-backdrop-filter: blur(0.25rem);
       outline: thin solid $dark-color;
+      border-radius: 0.1rem;
     }
 
     .header__logo svg {
@@ -229,6 +230,7 @@ ul {
     backdrop-filter: blur(0.25rem);
     -webkit-backdrop-filter: blur(0.25rem);
     outline: thin solid $dark-color;
+    border-radius: 0.1rem;
     width: 100vw;
     z-index: 80;
   }
