--- a/frontend/portfolio-react-app/src/index.scss
+++ b/frontend/portfolio-react-app/src/index.scss
@@ -1,70 +1,61 @@
-/*
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@use 'styles/base';
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+html * {
+  scroll-behavior: smooth;
 }
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-family: base.$duru-regular;
+  color: base.$dark-color;
+  background-color: base.$green-color;
+  background-image: url("./assets/svg/hexagon-1.svg");
+  background-repeat: no-repeat;
+  cursor: none;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  border: none;
+  background: none;
+  padding: 0;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+a {
+  cursor: none;
+  text-decoration: none;
+}
+
+strong {
+  color: base.$grey-color;
+  font-family: base.$karla-bold;
+}
+
+ul, ol {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+textarea {
+  resize: vertical;
+}
+
+:focus-visible {
+  outline: 2px solid base.$dark-color;
+}
+
+// THEME - DARK
+
+body.theme-dark {
+  color: base.$green-color;
+  background-color: base.$dark-color;
+  background-image: url("./assets/svg/hexagon-1-dark.svg");
+
+  strong {
+    color: base.$white-color;
   }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+
+  :focus-visible {
+    outline-color: base.$white-color;
   }
 }
-*/
