--- a/backend/portfolio/templates/portfolio/about.html
+++ b/backend/portfolio/templates/portfolio/about.html
@@ -3,11 +3,13 @@
 {% block title %}Clément Floret's portfolio{% endblock %}
 
 {% block description %}
-    Bienvenue sur mon portfolio en ligne.
-    Découvrez mes compétences en développement et mes projets web ou mobile.
-    Contactez-moi pour discuter de nouvelles opportunités.
+    Welcome to my online portfolio.
+    Discover my development skills and my web or mobile projects.
+    Contact me to discuss new opportunities.
 {% endblock %}>
 
 {% block content %}
     {{ portfolio|json_script:"portfolio" }}
+    {{ about_skills|json_script:"about-skills" }}
+    {{ about_links|json_script:"about-links" }}
 {% endblock %}
