--- a/backend/portfolio/templates/portfolio/contact.html
+++ b/backend/portfolio/templates/portfolio/contact.html
@@ -1,13 +1,14 @@
 {% extends "portfolio/base.html" %}
 
-{% block title %}Clément Floret's portfolio{% endblock %}
+{% block title %}Clément Floret | Portfolio{% endblock %}
 
 {% block description %}
-    Bienvenue sur mon portfolio en ligne.
-    Découvrez mes compétences en développement et mes projets web ou mobile.
-    Contactez-moi pour discuter de nouvelles opportunités.
+    Welcome to my online portfolio.
+    Discover my development skills and my web or mobile projects.
+    Contact me to discuss new opportunities.
 {% endblock %}>
 
 {% block content %}
-    
+    {{ portfolio|json_script:"portfolio" }}
+    {{ about_links|json_script:"about-links" }}
 {% endblock %}
