--- a/frontend/portfolio-react-app/src/styles/Project.scss
+++ b/frontend/portfolio-react-app/src/styles/Project.scss
@@ -23,6 +23,7 @@
   }
 
   &__text {
+    font-size: 1.125rem;
     margin: 2rem 0 3rem 0;
   }
 
@@ -39,14 +40,29 @@
     }
 
     a {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       color: base.$dark-color;
+      width: 3.5rem;
+      margin: 0.5rem;
       padding: 0.5625rem;
-      transition: color 0.2s ease-in;
 
       &:hover, &:focus-visible {
         color: base.$purple-color;
+
+        .project__icon {
+          filter: base.$purple-filter;
+        }
       }
     }
+  }
+
+  &__icon {
+    width: 2rem;
+    height: 2rem;
+    filter: base.$dark-filter;
   }
 }
 
@@ -68,6 +84,10 @@
 
     &__skills, &__links {
       margin: 2rem 0;
+
+      a {
+        width: 4rem;
+      }
     }
   }
 }
@@ -104,6 +124,7 @@
 
       a {
         padding: 0.25rem 0;
+        margin: 0.5rem 1rem 0.5rem 0;
       }
     }
   }
