modify frontend for better build

--- a/frontend/portfolio-react-app/src/index.scss
+++ b/frontend/portfolio-react-app/src/index.scss
@@ -9,7 +9,7 @@ body {
   font-family: base.$duru-regular;
   color: base.$dark-color;
   background-color: base.$green-color;
-  background-image: url("./assets/svg/hexagon-1.svg");
+  background-image: url("static/img/hexagon-body.svg");
   background-repeat: no-repeat;
   cursor: none;
 }
@@ -49,7 +49,7 @@ textarea {
 body.theme-dark {
   color: base.$green-color;
   background-color: base.$dark-color;
-  background-image: url("./assets/svg/hexagon-1-dark.svg");
+  background-image: url("static/img/hexagon-body-dark.svg");
 
   strong {
     color: base.$white-color;
