--- a/frontend/portfolio-react-app/src/styles/Menu.scss
+++ b/frontend/portfolio-react-app/src/styles/Menu.scss
@@ -12,7 +12,7 @@
     justify-content: center;
     align-items: center;
     background-color: base.$dark-color;
-    background-image: url("../assets/svg/hexagon-8.svg");
+    background-image: url("../static/img/hexagon-menu.svg");
     background-repeat: no-repeat;
     backdrop-filter: blur(0.25rem);
     -webkit-backdrop-filter: blur(0.25rem);
