--- a/frontend/portfolio-react-app/src/styles/Footer.scss
+++ b/frontend/portfolio-react-app/src/styles/Footer.scss
@@ -13,6 +13,13 @@
     margin: 0.75rem 0.5rem;
     padding: 0 1rem;
     font-size: 0.875rem;
+
+    &--home {
+      display: initial;
+      margin: 0.75rem 0.5rem;
+      padding: 0 1rem;
+      font-size: 0.875rem;
+    }
   }
 
   &__contact {
@@ -52,10 +59,6 @@
       grid-template-columns: repeat(3, 1fr);
       margin: 1rem;
       padding: 0 1rem;
-    }
-
-    &--home {
-      grid-template-columns: 1fr;
     }
 
     &__contact {
