--- a/frontend/portfolio-react-app/src/styles/Project.scss
+++ b/frontend/portfolio-react-app/src/styles/Project.scss
@@ -78,6 +78,10 @@
       margin: 2rem 12%;
     }
 
+    &__title {
+      font-size: 2.5rem;
+    }
+
     .project__text {
       margin: 2.5rem 0 3.5rem 0;
     }
@@ -99,6 +103,10 @@
     &__content {
       margin: 2rem 15%;
     }
+
+    &__title {
+      font-size: 2.75rem;
+    }
   }
 }
 
@@ -116,6 +124,7 @@
     }
 
     &__title {
+      font-size: 3rem;
       margin: 0.5rem 0;
     }
 
@@ -137,6 +146,10 @@
     &__content {
       max-width: 38rem;
       margin: 0 3rem 0 2rem;
+    }
+
+    &__title {
+      font-size: 3.5rem;
     }
   }
 }
