--- a/frontend/portfolio-react-app/src/styles/Projects.scss
+++ b/frontend/portfolio-react-app/src/styles/Projects.scss
@@ -16,7 +16,7 @@
     font-family: base.$karla-bold;
     font-size: 2.25rem;
     text-transform: uppercase;
-    margin: 0.5rem 1rem;
+    margin: 0.5rem 0.5rem 2.5rem 0.5rem;
   }
 
   &__filters {
@@ -25,7 +25,7 @@
     grid-gap: 0.25rem;
     justify-items: center;
     align-content: center;
-    margin: 0 0 3rem 0;
+    margin: 0.5rem 0 1rem 0;
 
     li {
       transition: all 0.2s ease-in;
@@ -43,8 +43,8 @@
 
   &__filter-btn {
     position: relative;
-    font-family: base.$duru-regular;
-    font-size: 1rem;
+    font-family: base.$ruda-regular;
+    font-size: 1.25rem;
     color: base.$dark-color;
     padding: 0.75rem 1rem;
     transition: color 0.2s ease-in;
@@ -73,7 +73,12 @@
     padding: 7rem 0;
 
     &__title {
-      margin: 1rem;
+      font-size: 2.5rem;
+      margin: 0.5rem 0.5rem 4rem 0.5rem;
+    }
+
+    &__filters {
+      margin-bottom: 2.5rem;
     }
   }
 }
@@ -83,6 +88,14 @@
 @media all and (min-width: base.$medium) {
   .projects {
     max-width: 38rem;
+
+    &__title {
+      font-size: 2.75rem;
+    }
+
+    &__filter-btn {
+      font-size: 1.375rem;
+    }
   }
 }
 
@@ -92,6 +105,15 @@
   .projects {
     max-width: 48rem;
     padding: 8rem 0;
+
+    &__title {
+      font-size: 3rem;
+      margin: 0.5rem 0.5rem 6rem 0.5rem;
+    }
+
+    &__filters {
+      margin-bottom: 3rem;
+    }
   }
 }
 
@@ -101,6 +123,19 @@
   .projects {
     max-width: 48rem;
     padding: 8rem 0;
+
+    &__title {
+      font-size: 3.5rem;
+      margin: 0.5rem 0.5rem 8rem 0.5rem;
+    }
+
+    &__filters {
+      margin-bottom: 4rem;
+    }
+
+    &__filter-btn {
+      font-size: 1.5rem;
+    }
   }
 }
 
