--- a/backend/portfolio/templates/portfolio/about.html
+++ b/backend/portfolio/templates/portfolio/about.html
@@ -1,5 +1,5 @@
 {% extends "portfolio/base.html" %}
-
+{% load i18n %}
 {% block title %}Clément Floret's portfolio{% endblock %}
 
 {% block description %}
