--- a/backend/portfolio/templates/portfolio/base.html
+++ b/backend/portfolio/templates/portfolio/base.html
@@ -1,7 +1,11 @@
+{% load i18n %}
+{% get_available_languages as languages %}
+{% get_current_language as LANGUAGE_CODE %}
+
 {% load static %}
 
 <!doctype html>
-<html lang="en">
+<html lang="{{ LANGUAGE_CODE }}">
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -12,18 +16,16 @@
     <link rel="icon" href="{% static 'portfolio/icons/favicon.ico' %}" type="image/x-icon">
     <link rel="manifest" href="{% static 'portfolio/site.webmanifest' %}">
 
-    <title>{% block title %}Clément Floret | Portfolio{% endblock %}</title>
+    <title>{% block title %}{% translate 'title' %}{% endblock %}</title>
     <meta name="description"
-          content="Welcome to my online portfolio.
-          Discover my web and mobile projects, and my development skills.
-          Contact me to discuss new opportunities."/>
-  <script type="module" crossorigin src="{% static 'portfolio/js/index-BWC2lFi9.js' %}"></script>
-  <link rel="stylesheet" crossorigin href="{% static 'portfolio/css/index-Gs_lxHpn.css' %}">
+          content="{% translate 'meta_description' %}"/>
+  <script type="module" crossorigin src="{% static 'portfolio/js/index-CYWISYVN.js' %}"></script>
+  <link rel="stylesheet" crossorigin href="{% static 'portfolio/css/index-C1NPeC6W.css' %}">
     {% block meta %}{% endblock %}
 </head>
 <body>
 <div id="root"></div>
-<noscript>You need to enable JavaScript to run this app.</noscript>
+<noscript>{% translate 'noscript_message' %}</noscript>
 {% block content %}{% endblock %}
 </body>
 </html>
