--- a/frontend/portfolio-react-app/src/styles/Cursor.scss
+++ b/frontend/portfolio-react-app/src/styles/Cursor.scss
@@ -14,6 +14,7 @@
     transition-property: color, transform;
     transition-duration: 0.3s;
     transition-timing-function: ease-in;
+    will-change: left, top;
 
     &--big {
       color: rgba(base.$dark-color, 14%);
