--- a/frontend/portfolio-react-app/src/index.scss
+++ b/frontend/portfolio-react-app/src/index.scss
@@ -1,5 +1,12 @@
 @use 'styles/base';
 
+:root {
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 html * {
   scroll-behavior: smooth;
 }
