--- a/frontend/portfolio-react-app/src/styles/Contact.scss
+++ b/frontend/portfolio-react-app/src/styles/Contact.scss
@@ -76,6 +76,7 @@
   .contact {
     max-width: 32rem;
     padding: 7rem 0;
+    margin-bottom: 8rem;
 
     &__title {
       font-size: 2.5rem;
@@ -89,6 +90,7 @@
 @media all and (min-width: base.$medium) {
   .contact {
     max-width: 38rem;
+    margin-bottom: 10rem;
 
     &__title {
       font-size: 2.75rem;
@@ -102,6 +104,7 @@
   .contact {
     max-width: 48rem;
     padding: 8rem 0;
+    margin-bottom: 12rem;
 
     &__title {
       font-size: 3rem;
@@ -114,6 +117,8 @@
 
 @media all and (min-width: base.$x-large) {
   .contact {
+    margin-bottom: 14rem;
+
     &__title {
       font-size: 3.5rem;
       margin: 0.5rem 0.5rem 8rem 0.5rem;
