--- a/frontend/portfolio-react-app/src/styles/ProjectCard.scss
+++ b/frontend/portfolio-react-app/src/styles/ProjectCard.scss
@@ -3,22 +3,84 @@
 // PROJECT-CARD
 
 .project-card {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 20rem;
+  position: absolute;
+  margin: 0.75rem;
+  transform: translateY(0) translateX(0);
+  scale: 60%;
+  opacity: 0;
+  z-index: 10;
+  transition: all 0.3s ease-in;
 
-  &__thumbnail {
+  &--indexMinus2 {
+    transform: translateY(-85%);
+    scale: 60%;
+    opacity: 50%;
+    z-index: 10;
+  }
+
+  &--indexMinus1 {
+    transform: translateY(-35%);
+    scale: 80%;
+    opacity: 75%;
+    z-index: 15;
+  }
+
+  &--index {
+    transform: translateY(0);
+    scale: 100%;
+    opacity: 100%;
+    z-index: 20;
+
+    &:hover, &:focus-visible {
+      .project-card {
+        &__img {
+          filter: brightness(30%) blur(0.025rem);
+          transform: scale(105%);
+          border-width: medium;
+        }
+
+        &__text {
+          opacity: 1;
+        }
+      }
+    }
+  }
+
+  &--indexPlus1 {
+    transform: translateY(35%);
+    scale: 80%;
+    opacity: 75%;
+    z-index: 15;
+  }
+
+  &--indexPlus2 {
+    transform: translateY(85%);
+    scale: 60%;
+    opacity: 50%;
+    z-index: 10;
+  }
+
+  .project-card__link {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+
+    &--disable {
+      pointer-events: none;
+    }
   }
 
   &__img {
-    width: 36rem;
-    height: auto;
+    height: 54vw;
+    max-height: 16rem;
+    width: 80vw;
+    max-width: 24rem;
+    object-fit: cover;
     transition: all 0.3s ease-in;
-    filter: brightness(90%);
+    border: thin solid base.$dark-color;
   }
 
   &__text {
@@ -40,19 +102,6 @@
     font-size: 1rem;
     margin: 0.25rem 0;
   }
-
-  &:hover, &:focus-visible {
-    .project-card {
-      &__img {
-        filter: brightness(60%) blur(0.05rem);
-        transform: scale(105%);
-      }
-
-      &__text {
-        opacity: 1;
-      }
-    }
-  }
 }
 
 // -- MEDIA QUERIES -- //
@@ -61,10 +110,27 @@
 
 @media all and (min-width: base.$small) {
   .project-card {
-    height: 22rem;
+    &--indexMinus2 {
+      transform: translateX(-67%);
+    }
+
+    &--indexMinus1 {
+      transform: translateX(-25%);
+    }
+
+    &--indexPlus1 {
+      transform: translateX(25%);
+    }
+
+    &--indexPlus2 {
+      transform: translateX(67%);
+    }
 
     &__img {
-      width: 40rem;
+      height: 44vw;
+      max-height: 20rem;
+      width: 64vw;
+      max-width: 28rem;
     }
   }
 }
@@ -73,10 +139,27 @@
 
 @media all and (min-width: base.$medium) {
   .project-card {
-    height: 26rem;
+    &--indexMinus2 {
+      transform: translateX(-80%);
+    }
+
+    &--indexMinus1 {
+      transform: translateX(-35%);
+    }
+
+    &--indexPlus1 {
+      transform: translateX(35%);
+    }
+
+    &--indexPlus2 {
+      transform: translateX(80%);
+    }
 
     &__img {
-      width: 46rem;
+      height: 40vw;
+      max-height: 22rem;
+      width: 58vw;
+      max-width: 32rem;
     }
   }
 }
@@ -85,10 +168,34 @@
 
 @media all and (min-width: base.$large) {
   .project-card {
-    height: 30rem;
-
     &__img {
-      width: 54rem;
+      height: 34vw;
+      max-height: 26rem;
+      width: 50vw;
+      max-width: 36rem;
+    }
+  }
+}
+
+// MEDIA QUERY - X-LARGE (1280p)
+
+@media all and (min-width: base.$x-large) {
+  .project-card {
+    &__img {
+      height: 32vw;
+      max-height: 34rem;
+      width: 43vw;
+      max-width: 46rem;
+    }
+  }
+}
+
+// THEME - DARK
+
+body.theme-dark {
+  .project-card {
+    &__img {
+      border-color: base.$green-color;
     }
   }
 }
