--- a/frontend/portfolio-react-app/src/styles/ProjectList.scss
+++ b/frontend/portfolio-react-app/src/styles/ProjectList.scss
@@ -5,21 +5,31 @@
 .projects-list {
   &__content {
     width: 90vw;
-    overflow-y: hidden;
-    overflow-x: scroll;
   }
 
-  &__buttons {
+  &__buttons-yaxis {
     position: absolute;
     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+  }
+
+  &__buttons-xaxis {
+    position: absolute;
+    display: none;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    width: 95vw;
+    width: 100%;
   }
 
   &__button {
-    font-size: 1.25rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     color: base.$green-color;
     background-color: rgba(base.$dark-color, 80%);
     border: thin solid base.$green-color;
@@ -35,29 +45,22 @@
       transform: scale(110%);
       cursor: none;
     }
+
+    svg {
+      color: base.$green-color;
+      width: 2.75rem;
+      height: 2.75rem;
+    }
   }
 
   &__list {
     display: flex;
-    flex-direction: row;
-    justify-content: start;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    gap: 0.25rem;
-    height: 22rem;
-    margin: 0;
-    padding: 1rem;
-
-    li {
-      flex: 0 0 7rem;
-      overflow: hidden;
-      border: thin base.$dark-color solid;
-      border-radius: 0.2rem;
-      transition: all 0.3s ease-in-out;
-
-      &:hover, &:focus-visible {
-        flex: 0 0 16rem;
-      }
-    }
+    height: 100vw;
+    max-height: 30rem;
+    padding: 3rem 0;
   }
 }
 
@@ -71,19 +74,17 @@
       width: 85vw;
     }
 
-    &__buttons {
-      width: 90vw;
+    &__buttons-yaxis {
+      display: none;
+    }
+    &__buttons-xaxis {
+      display: flex;
     }
 
     &__list {
-      height: 22rem;
-      gap: 0.5rem;
-
-      li {
-        &:hover, &:focus-visible {
-          flex: 0 0 22rem;
-        }
-      }
+      height: 48vw;
+      max-height: 20rem;
+      padding: 0;
     }
   }
 }
@@ -96,21 +97,8 @@
       width: 82vw;
     }
 
-    &__buttons {
-      width: 87vw;
-    }
-
     &__list {
-      height: 26rem;
-      gap: 0.75rem;
-
-      li {
-        flex: 0 0 9rem;
-
-        &:hover, &:focus-visible {
-          flex: 0 0 26rem;
-        }
-      }
+      max-height: 22rem;
     }
   }
 }
@@ -120,34 +108,36 @@
 @media all and (min-width: base.$large) {
   .projects-list {
     &__content {
-      max-width: 62rem;
+      width: 90vw;
     }
 
-    &__buttons {
-      max-width: 66rem;
+    &__buttons-xaxis {
+      width: 92%;
     }
 
     &__list {
-      height: 30rem;
-      gap: 1rem;
-
-      li {
-        flex: 0 0 11rem;
-
-        &:hover, &:focus-visible {
-          flex: 0 0 28rem;
-        }
-      }
+      height: 34vw;
+      max-height: 26rem;
     }
   }
 }
 
-// THEME - DARK
+// MEDIA QUERY - X-LARGE (1280p)
 
-body.theme-dark {
-  .project-list {
-    li {
-      border-color: base.$green-color;
+@media all and (min-width: base.$x-large) {
+  .projects-list {
+    &__buttons-xaxis {
+      width: 80rem;
+    }
+
+    &__buttons-xaxis {
+      width: 88%;
+      max-width: 76rem;
+    }
+
+    &__list {
+      height: 32vw;
+      max-height: 34rem;
     }
   }
 }
