--- a/frontend/portfolio-react-app/src/styles/Projects.scss
+++ b/frontend/portfolio-react-app/src/styles/Projects.scss
@@ -16,7 +16,7 @@
     font-family: base.$karla-bold;
     font-size: 2.25rem;
     text-transform: uppercase;
-    margin: 0.5rem 0.5rem 2.5rem 0.5rem;
+    margin: 0.5rem 0.5rem 5rem 0.5rem;
   }
 
   &__filters {
@@ -60,6 +60,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    margin: 2rem 0;
   }
 }
 
@@ -75,11 +76,15 @@
 
     &__title {
       font-size: 2.5rem;
-      margin: 0.5rem 0.5rem 4rem 0.5rem;
+      margin: 0.5rem 0.5rem 7rem 0.5rem;
     }
 
     &__filters {
-      margin-bottom: 2.5rem;
+      margin-bottom: 2rem;
+    }
+
+    &__list {
+      margin: 0.5rem 0;
     }
   }
 }
@@ -93,6 +98,7 @@
 
     &__title {
       font-size: 2.75rem;
+      margin: 0.5rem 0.5rem 8rem 0.5rem;
     }
 
     &__filter-btn {
@@ -111,11 +117,6 @@
 
     &__title {
       font-size: 3rem;
-      margin: 0.5rem 0.5rem 6rem 0.5rem;
-    }
-
-    &__filters {
-      margin-bottom: 3rem;
     }
   }
 }
@@ -130,11 +131,11 @@
 
     &__title {
       font-size: 3.5rem;
-      margin: 0.5rem 0.5rem 8rem 0.5rem;
+      margin: 0.5rem 0.5rem 10rem 0.5rem;
     }
 
     &__filters {
-      margin-bottom: 4rem;
+      margin-bottom: 3rem;
     }
 
     &__filter-btn {
